assets/styles/index.scss
$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
@import '~bootstrap-sass/assets/stylesheets/bootstrap';

h1 {
  font-family: 'Rock Salt', cursive;
  font-size: 40px;
  padding-bottom: 20px;
  text-align: center;
}

#sign-in {
  display: block;
  margin: 20px auto;
}

#sign-up {
  display: block;
  margin: 20px auto;
}

#sign-out {
  float: right;
  background-color: #F00;
}

#show-game {
  display: none;
  font-family: 'Rock Salt', cursive;
}

.btn-index {
  display: none;
  margin: 0 auto;
  width: 200px;
}

.btn-create {
  display: none;
  margin: 0 auto;
  width: 200px;
}

.banner {
  height: auto;
  width: auto;
  margin: 0 auto;
  display: none;
  margin-top: 35px;
  padding-bottom: 20px;
  text-align: center;
  justify-content: center;
  align-items: center;
  font-size: 25px;
  font-weight: bolder;
  font-family: 'Rock Salt', cursive;
}

.winner {
  height: auto;
  width: auto;
  margin: 0 auto;
  display: none;
  margin-top: 35px;
  text-align: center;
  justify-content: center;
  align-items: center;
  font-size: 25px;
  font-weight: bolder;
}

.board {
  height: 450px;
  width: 450px;
  color: #fff;
  background: #252525;
  padding: 30px;
  margin: 0 auto;
  display: none;
  font-size: 6em;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.row {
  height: 33.3%;
}

.field {
  display: block;
  height: 100%;
  font-family: 'Rock Salt', cursive;
}

.board .row:nth-child(1),
.board .row:nth-child(2){
  border-bottom: 5px solid #fff;
}

.board .field:nth-child(2n){
  border-left: 5px solid #fff;
  border-right: 5px solid #fff;
}

.showgames {
  height: auto;
  width: auto;
  padding: 0 auto;
  margin: 0 auto;
  text-align: center;
  justify-content: center;
  align-items: center;
  font-size: 25px;
  font-weight: bolder;
  font-family: 'Rock Salt', cursive;
}

.alert {
  display: none;
}

@media (max-width: 449px) {
  .board {
    width: 320px;
    height: 320px;
  }

  .field {
    height: 85px;
    text-align: center;
    font-size: 35px;
    padding-top: 15px;
  }
};

